--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,8 @@
 .pnp.js
 part*/**/node_modules
 
-
 # testing
 /coverage
-
-# production
-part*/**/build
 
 # misc
 .DS_Store
@@ -20,6 +16,7 @@ part*/**/build
 part*/**/.env
 course-resources/
 part1/exercise1-8
+part2/exercise2-4/scaling-exercise
 
 npm-debug.log*
 yarn-debug.log*
