--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ course-resources/
 part1/exercise1-8
 part2/exercise2-4/scaling-exercise
 part2/exercise2-7/src
+part2/exercise2-9/data
+part2/exercise2-9/database
+part2/exercise2-9/logs.txt
+part2/exercise2-9/nginx.conf
 
 npm-debug.log*
 yarn-debug.log*
